src/objects/vlocity_ins__InsuredItemCoverage__c.object
<CustomObject>
    <description>DEPRECATED. Use Policy Coverage (AssetCoverage__c) instead. Represents premium, deductible and coverage limit for individual line item covered under the policy such as a building, vehicle or individual. Master-detail child object of Insured Items/People (PolicyLineItem__c).</description>
    <fields>
        <fullName>vlocity_ins__AggregateLimitAmount__c</fullName>
        <label>Aggregate Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageCode__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeductibleAmount__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyLineItemId__c</fullName>
        <label>Insured Items/People</label>
        <referenceTo>vlocity_ins__PolicyLineItem__c</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiumAmount__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SingleLimitAmount__c</fullName>
        <label>Single Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>Peril</fullName>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Coverage</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>